# outbound-lb

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yaml  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  release.yml
cmd/outbound-lb/: main.go
demos/: README.md
demos/curl/: README.md  examples.sh
demos/go/: README.md  basic_proxy.go  go.mod
demos/java/: BasicProxy.java  README.md
demos/nodejs/: README.md  basic_proxy.js  package.json
demos/php/: README.md  basic_proxy.php
demos/python/: README.md  basic_proxy.py
demos/ruby/: README.md  basic_proxy.rb
demos/rust/: Cargo.toml  README.md
demos/rust/src/: main.rs
deployments/: docker-compose.yml
deployments/docker/: Dockerfile
deployments/systemd/: outbound-lb.service
internal/balancer/: balancer.go  balancer_test.go  circuitbreaker.go  circuitbreaker_test.go  history.go  history_test.go  lru.go  lru_bench_test.go  lru_test.go  memory_test.go
internal/config/: config.go  config_test.go  watcher.go  yaml_test.go
internal/health/: checker_http.go  checker_http_test.go  checker_tcp.go  checker_tcp_test.go  healthchecker.go  healthchecker_test.go  status.go
internal/limiter/: limiter.go  limiter_bench_test.go  limiter_test.go
internal/logger/: logger.go  logger_test.go
internal/metrics/: endpoints_test.go  metrics.go  metrics_test.go  server.go  server_test.go
internal/proxy/: connect.go  connect_test.go  constants.go  dialer_test.go  handler.go  handler_bench_test.go  handler_test.go  integration_test.go  (+8 more)
(+3 files in other folders)
