[package]
name = "outbound-lb-rust-demo"
version = "1.0.0"
edition = "2021"
description = "Rust demo for Outbound LB proxy"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
